Move validateFieldNames() to JsonUtils.cpp
I wanted to use this function from ACcount.cpp and ChainParams.cpp, and I thought the function should move somewhere in libdevcore.

--- a/eth/CMakeLists.txt
+++ b/eth/CMakeLists.txt
@@ -11,4 +11,6 @@ target_link_libraries(
     PRIVATE ethereum ethashseal evm web3jsonrpc webthree devcore
 )
 
+target_include_directories(eth PRIVATE ../utils)
+
 install(TARGETS eth DESTINATION bin)
