--- a/ethvm/CMakeLists.txt
+++ b/ethvm/CMakeLists.txt
@@ -2,4 +2,6 @@ add_executable(ethvm main.cpp)
 
 target_link_libraries(ethvm PRIVATE ethereum evm ethashseal devcore)
 
+target_include_directories(ethvm PRIVATE ../utils)
+
 install(TARGETS ethvm DESTINATION bin OPTIONAL)
