--- a/libdevcore/CMakeLists.txt
+++ b/libdevcore/CMakeLists.txt
@@ -9,7 +9,7 @@ add_dependencies(devcore BuildInfo.h)
 target_include_directories(devcore PUBLIC ..)
 
 # Needed to prevent including system-level boost headers:
-target_include_directories(devcore SYSTEM PUBLIC ${Boost_INCLUDE_DIR})
+target_include_directories(devcore SYSTEM PUBLIC ${Boost_INCLUDE_DIR} PRIVATE ../utils)
 
 target_link_libraries(devcore Boost::filesystem Boost::system Boost::thread Threads::Threads)
 
