--- a/libwebthree/CMakeLists.txt
+++ b/libwebthree/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_library(webthree WebThree.cpp WebThree.h)
+target_include_directories(webthree PRIVATE ../utils)
 target_link_libraries(webthree PUBLIC ethereum whisper p2p devcore)
