Circle CI: Add workflows

--- a/circle.yml
+++ b/circle.yml
@@ -7,13 +7,13 @@ default-steps: &default-steps
 
   - cache-restore:
       name: "Restore dependencies cache"
-      key: deps-4-{{ checksum "cmake/ProjectJsonRpcCpp.cmake" }}
+      key: &deps-cache-key deps-0-{{ .Environment.CXX }}{{ checksum "cmake/ProjectJsonRpcCpp.cmake" }}
 
   - run:
       name: "Configure"
       command: |
         mkdir -p build && cd build
-        cmake .. -G Ninja -DCOVERAGE=ON -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang
+        cmake .. -G "${GENERATOR}" -DCOVERAGE=ON
 
   - run:
       name: "Upload Hunter cache"
@@ -24,13 +24,11 @@ default-steps: &default-steps
 
   - run:
       name: "Build"
-      pwd: ~/cpp-ethereum/build
-      command: |
-        ninja -j8
+      command: cmake --build build -- -j8
 
   - cache-save:
       name: "Save dependencies cache"
-      key: deps-4-{{ checksum "cmake/ProjectJsonRpcCpp.cmake" }}
+      key: *deps-cache-key
       paths:
         - ~/cpp-ethereum/build/deps
 
@@ -68,9 +66,25 @@ default-steps: &default-steps
 
 version: 2
 jobs:
+
   default-clang5-ninja:
+    environment:
+      - CXX: clang++-5.0
+      - CC:  clang-5.0
+      - GENERATOR: Ninja
     docker:
-      - image: ethereum/cpp-build-env:experimental
+      - image: ethereum/cpp-build-env
+    working_directory: ~/cpp-ethereum
+    steps: *default-steps
+
+  debug-gcc4-ninja:
+    environment:
+      - BUILD_TYPE: Debug
+      - CXX: g++-4.8
+      - CC:  gcc-4.8
+      - GENERATOR: Ninja
+    docker:
+      - image: ethereum/cpp-build-env
     working_directory: ~/cpp-ethereum
     steps: *default-steps
 
@@ -79,3 +93,4 @@ workflows:
   cpp-ethereum:
     jobs:
       - default-clang5-ninja
+      - debug-gcc4-ninja
