--- a/esi/CMakeLists.txt
+++ b/esi/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable(esi ${sources})
 target_include_directories(esi PRIVATE ../utils)
 target_link_libraries(
     esi
-    PRIVATE esiconsensus ethereum web3jsonrpc devcore
+    PRIVATE esiwebthree esiconsensus ethereum web3jsonrpc devcore
 )
 
 install(TARGETS esi DESTINATION bin)
